# lectionary-pdf-generator

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
lambda/: lectionary_function.py
lectionary_pdf_generator/: lectionary_pdf_generator_stack.py
tests/unit/: test_lectionary_pdf_generator_stack.py
