[tool.poetry]
name = "lectionary-pdf-generator"
version = "0.1.0"
description = ""
authors = ["tobycheng <tobycfcheng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aws-cdk-lib = "^2.146.0"
constructs = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
